# Table-Extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev-test/: main.py
scripts/: README.md  pdf_table_extractor.py
src/: detect_table.py  example.py  main.py  pdf_table_extractor.py  table_extractor.py
table-extractor/: __init__.py  run.py
table-extractor/src/: config.py  main.py
table-extractor/src/column_detection/: __init__.py  post_processing.py  rule_based.py  template_based.py
table-extractor/src/models/: __init__.py  detection.py  ocr.py  structure.py
table-extractor/src/utils/: __init__.py  file_io.py  image_utils.py  visualization.py
table-transformer/: main.py
table-transformer-v2/: main.py
table-transformer-v2/src/: config.py  ocr_processing.py  pdf_processor.py  table_detection.py  table_recognition.py  utils.py
table-transformer-v4/: main.py
table-transformer/src/: __init__.py  ocr_processor.py  pdf_processor.py  structure_recognizer.py  table_detector.py  utils.py
