[project]
name = "Table-extractor"
version = "0.1.0"
description = "Extract table from multipage PDF using Table-Transformer and PaddleOCR"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "accelerate>=1.6.0",
    "matplotlib>=3.10.1",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.5",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
]
