[project]
name = "table-extractor"
version = "0.1.0"
description = "Extract table from multipage PDF using OpenCV and PaddleOCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "poppler-utils>=0.1.0",
    "setuptools>=78.1.0",
    "tqdm>=4.67.1",
]
